--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ source = ["promising"]
 
 [project]
 name = "promising"
-version = "0.0.0"
+version = "0.0.1"
 description = """TODO"""
 authors = [{name = "Oleksandr Tereshchenko", email = "toporok@gmail.com"}]
 homepage = "https://github.com/teremterem/Promising"
@@ -23,8 +23,8 @@ dev = [
     "black",
     "hatch",
     "ipython",
-    "jupyterlab",
-    "notebook",  # this is needed for notebooks to work in PyCharm
+    # "jupyterlab",
+    # "notebook",  # this is needed for notebooks to work in PyCharm
     "pre-commit",
     "pylint",
     "pytest",
