--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,7 @@ homepage = "https://github.com/teremterem/Promising"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.10"
-dependencies = [
-    "pydantic>=2.0.0,<3.0.0",
-]
+dependencies = []
 
 [project.optional-dependencies]
 dev = [
